# TirtaIYREF

tirta-main/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
tirta-main/prisma/: schema.prisma
tirta-main/prisma/migrations/20260507111153_init/: migration.sql
tirta-main/public/: manifest.json  sw.js
tirta-main/src/app/: globals.css  layout-client.tsx  layout.tsx  page.tsx  pwa-provider.tsx
tirta-main/src/app/auth/: layout.tsx
tirta-main/src/app/auth/login/: page.tsx
tirta-main/src/app/history/: page.tsx
tirta-main/src/app/home/: page.tsx
tirta-main/src/app/map/: page.tsx
tirta-main/src/app/map/components/: map-legend.tsx  (+4 more)
tirta-main/src/app/profile/: page.tsx
tirta-main/src/components/: app-bottom-nav.tsx
tirta-main/src/components/card/: report-card-row.tsx
tirta-main/src/components/search/: search-filter.tsx
tirta-main/src/components/ui/: button.tsx
tirta-main/src/lib/: auth-context.tsx  forecast-zone.ts  geo.ts  report-text-analysis.ts  zones.ts
tirta-models/: .env  Dockerfile  README.md  pyproject.toml  requirements.txt
tirta-models/flood_history/output/exports/: model_metrics.json
tirta-models/flood_history/output/models/: xgboost_model.json
tirta-models/flood_history/src/: __init__.py  config.py  data_preparation.py  feature_engineering.py  flood_history_clean.ipynb  forecasting.py  geospatial_clustering.py  main.py  models.py  uncertainty_quantification.py  utils.py  visualization.py
tirta-models/src/: main.py
tirta-models/src/api/: routes.py
tirta-models/src/core/: visual_analyzer.py
(+14 files in other folders)
