[project]
name = "tirta-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloudinary>=1.41.0",
    "fastapi>=0.136.1",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "scipy>=1.15.3",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.7.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
